--- a/src/index.html
+++ b/src/index.html
@@ -1,23 +1,103 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-		<meta charset="utf-8">
-  <title>Regalia 2022</title>
-  <meta name="description" content="Regalia - The annual cultural fest in RCC Institute of Information Technology 2022">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8" />
+    <meta http-equiv="x-ua-compatible" content="ie=edge" />
+    <meta name="msapplication-tap-highlight" content="no" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <meta property="og:title" content="Regalia 2022">
-  <meta property="og:type" content="">
-  <meta property="og:url" content="">
-  <meta property="og:image" content="">
+    <title>Regalia '22 | The Annual Cultural Fest</title>
 
-    <link rel="icon" type="image/svg+xml" href="favicon.svg" />
+    <meta name="author" content="Regalia 2022 Tech Team" />
+    <meta name="keywords" content="website annual fest rcciit college" />
+    <meta
+      name="description"
+      content="Regalia - The annual cultural fest in RCC Institute of Information Technology 2022"
+    />
 
+    <meta itemprop="name" content="Regalia" />
+    <meta
+      itemprop="description"
+      content="Regalia - The annual cultural fest in RCC Institute of Information Technology 2022"
+    />
+    <meta itemprop="image" content="http://website_url/image.jpg" />
+
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+    <meta name="apple-mobile-web-app-title" content="Regalia '22" />
+
+    <meta property="og:url" content="http://yourawesomeproject.com" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Regalia '22" />
+    <meta property="og:image" content="http://website_url/image.jpg" />
+    <meta
+      property="og:description"
+      content="Regalia - The annual cultural fest in RCC Institute of Information Technology 2022"
+    />
+    <meta property="og:site_name" content="Site Name" />
+
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:site" content="@site_account" />
+    <meta name="twitter:creator" content="@individual_account" />
+    <meta name="twitter:url" content="url_here" />
+    <meta name="twitter:title" content="Regalia 2022" />
+    <meta
+      name="twitter:description"
+      content="Regalia - The annual cultural fest in RCC Institute of Information Technology 2022"
+    />
+    <meta
+      name="twitter:image"
+      content="http://yourawesomeproject.com/image.jpg"
+    />
+
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="manifest" href="/site.webmanifest" />
+
+    <link type="text/plain" rel="author" href="/humans.txt" />
   </head>
-  <body>
-		<!-- remove the next line (div[#app]) -->
-		<!-- and start creating -->
-    <div id="app"></div>
+
+  <body class="bg-background font-primary text-text">
+    <nav data-navbar>
+      <!-- add navbar -->
+    </nav>
+
+    <!-- HOME -->
+    <section data-home class="p h-screen w-full">
+      <h1 class="text-title font-black">Home</h1>
+    </section>
+
+    <!-- EVENTS -->
+    <section data-home class="p h-screen w-full">
+      <h1 class="text-title font-black">Events</h1>
+    </section>
+
+    <!-- ARTISTS -->
+    <section data-home class="p h-screen w-full">
+      <h1 class="text-title font-black">Artists</h1>
+    </section>
+
+    <!-- ABOUT -->
+    <section data-home class="p h-screen w-full">
+      <h1 class="text-title font-black">About</h1>
+    </section>
+
+    <!-- CONTACT -->
+    <section data-home class="p h-screen w-full">
+      <h1 class="text-title font-black">Contact</h1>
+    </section>
+
+    <footer data-footer>
+      <!-- add footer -->
+    </footer>
+
+    <!-- PRELOADER -->
+    <div data-preloader aria-hidden="true" aria-label="">
+      <!-- add preloader -->
+    </div>
+
+    <!-- (do not edit below) -->
     <script type="module" src="/main.js"></script>
   </body>
 </html>
