--- a/src/index.html
+++ b/src/index.html
@@ -56,6 +56,7 @@
     <link rel="manifest" href="/site.webmanifest" />
 
     <link type="text/plain" rel="author" href="/humans.txt" />
+    <link rel="stylesheet" href="contact.css" />
   </head>
 
   <body class="bg-background font-primary text-text">
@@ -84,8 +85,43 @@
     </section>
 
     <!-- CONTACT -->
-    <section data-home class="p h-screen w-full">
-      <h1 class="text-title font-black">Contact</h1>
+    <!-- helped by @infuman69 -->
+    <section data-home class="contact p h-screen w-full">
+      <h1 class="contact-head">Contact</h1>
+      <h6 class="contact-head-6">For any query reach out to us</h6>
+      <div class="contact-middle-section">
+        <div class="google-maps">
+          <iframe class="maps" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3685.760390260655!2d88.35810182543582!3d22.513171437918277!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39f89c4c402582b5%3A0x8cfff1e8bddb6ff!2sNazrul%20Mancha!5e0!3m2!1sen!2sin!4v1651842142429!5m2!1sen!2sin" width="600" height="450" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+        <div class="contact-email-section">
+          <div class="email-us">
+            <h3>Email us at</h3>
+            <a href = "mailto:test@gmail.com">test@gmail.com</a>
+          </div>
+          <div class="contact-us">
+            <h3>Contact us</h3>
+            <div class="contacts">
+              <div class="contacts-item">
+                <h5>Name</h5>
+                <a href="tel:+4733378901">+47 333 78 901</a></div>
+              <div class="contacts-item">
+                <h5>Name</h5>
+                <a href="tel:+4733378901">+47 333 78 901</a></div>
+              <div class="contacts-item">
+                <h5>Name</h5>
+                <a href="tel:+4733378901">+47 333 78 901</a></div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="follow-us">
+        <h2>Follow us</h2>
+        <div class="platforms">
+          <div><a href="">Facebook</a></div>
+          <div><a href="">Twitter</a></div>
+          <div><a href="">Linkedin</a></div>
+        </div>
+      </div>
     </section>
 
     <footer data-footer>
