--- a/src/index.html
+++ b/src/index.html
@@ -49,7 +49,7 @@
   <link rel="stylesheet" href="contact.css" />
 </head>
 
-<body class="scroll-smooth bg-background font-primary text-text">
+<body class="scroll-smooth bg-background font-primary text-text" style="margin: 0px">
   <img class="absolute left-0 z-0 h-screen object-cover object-center" src="images/bg_home.jpg" alt=""
     aria-hidden="true" />
   <div class="absolute inset-0 z-[1] bg-background opacity-40"></div>
@@ -136,29 +136,26 @@
     <h6 class="contact-head-6">For any query reach out to us</h6>
     <div class="contact-middle-section">
       <div class="google-maps">
-        <iframe class="maps"
-          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3685.760390260655!2d88.35810182543582!3d22.513171437918277!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39f89c4c402582b5%3A0x8cfff1e8bddb6ff!2sNazrul%20Mancha!5e0!3m2!1sen!2sin!4v1651842142429!5m2!1sen!2sin"
-          width="600" height="450" allowfullscreen="" loading="lazy"
-          referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <iframe class="maps" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3685.760388605362!2d88.36258649999999!3d22.5131715!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39f89c4c402582b5%3A0x8cfff1e8bddb6ff!2sNazrul%20Mancha!5e0!3m2!1sen!2sin!4v1651865870162!5m2!1sen!2sin" width="600" height="450" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
       </div>
       <div class="contact-email-section">
         <div class="email-us">
           <h3>Email us at</h3>
-          <a href="mailto:test@gmail.com">test@gmail.com</a>
+          <a href="mailto:regalia2k22@gmail.com">regalia2k22@gmail.com</a>
         </div>
         <div class="contact-us">
           <h3>Contact us</h3>
           <div class="contacts">
             <div class="contacts-item">
-              <h5>Name</h5>
-              <a href="tel:+4733378901">+47 333 78 901</a>
+              <h4>Bhaswati Chakraborty</h4>
+              <a href="tel:+916291293545">+91 62912 93545</a>
             </div>
             <div class="contacts-item">
-              <h5>Name</h5>
-              <a href="tel:+4733378901">+47 333 78 901</a>
+              <h4>Nivedita Chakraborty</h4>
+              <a href="tel:+918583057308">+91 85830 57308</a>
             </div>
             <div class="contacts-item">
-              <h5>Name</h5>
+              <h4>Name</h4>
               <a href="tel:+4733378901">+47 333 78 901</a>
             </div>
           </div>
@@ -168,12 +165,12 @@
     <div class="follow-us">
       <h2>Follow us</h2>
       <div class="platforms">
-        <div><a href="">Facebook</a></div>
-        <div><a href="">Twitter</a></div>
-        <div><a href="">Linkedin</a></div>
+        <div><a href="https://www.facebook.com/regalia.rccfests/" target="_blank">Facebook</a></div>
+        <div><a href="" target=""_blank>Twitter</a></div>
+        <div><a href="https://www.instagram.com/regalia_rcc_2022/" target="_blank">Instagram</a></div>
       </div>
-    </div>
-  </section>
+      <iframe class="maps-mob-iframe" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3685.760388605362!2d88.36258649999999!3d22.5131715!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39f89c4c402582b5%3A0x8cfff1e8bddb6ff!2sNazrul%20Mancha!5e0!3m2!1sen!2sin!4v1651865870162!5m2!1sen!2sin" width="600" height="450" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </section>
 
   <footer data-footer>
     <!-- add footer -->
