--- a/src/index.html
+++ b/src/index.html
@@ -62,7 +62,7 @@
 <body class="relative scroll-smooth bg-background font-primary text-text" style="margin: 0px;">
   <img class="absolute w-full h-screen z-0 object-cover object-center" src="images/bg_home.jpg" alt=""
     aria-hidden="true" />
-  <div class="absolute inset-0 z-[1] bg-background opacity-40"></div>
+  <div class="absolute inset-0 h-screen z-[1] bg-background opacity-40"></div>
 
   <nav data-navbar class="fixed top-0 z-40 w-full transition-colors duration-200 ease-linear">
     <div class="flex w-full flex-col items-center justify-between sm:flex-row space-y-2 px-6 py-2 md:py-4">
