fixed contact section responsiveness

--- a/src/index.html
+++ b/src/index.html
@@ -145,10 +145,10 @@
     <h1 class="contact-head">Contact</h1>
     <h6 class="contact-head-6">For any query reach out to us</h6>
     <div class="contact-middle-section">
-      <!-- fallin-rain: I have added the w and h for prevent overflowing on smaller width devices. 
+      <!-- fallin-rain: I have added the w and h for prevent overflowing on smaller width devices.
         TODO: Reconfigure the CSS -->
-      <div class="google-maps w-20 h-80 sm:w-full sm:h-max">
-        <iframe class="maps w-full" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3685.760388605362!2d88.36258649999999!3d22.5131715!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39f89c4c402582b5%3A0x8cfff1e8bddb6ff!2sNazrul%20Mancha!5e0!3m2!1sen!2sin!4v1651865870162!5m2!1sen!2sin" width="600" height="450" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+      <div class="google-maps">
+        <iframe class="maps" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3685.760388605362!2d88.36258649999999!3d22.5131715!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39f89c4c402582b5%3A0x8cfff1e8bddb6ff!2sNazrul%20Mancha!5e0!3m2!1sen!2sin!4v1651865870162!5m2!1sen!2sin" width="600" height="450" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
       </div>
       <div class="contact-email-section">
         <div class="email-us">
@@ -166,10 +166,10 @@
               <h4>Nivedita Chakraborty</h4>
               <a href="tel:+918583057308">+91 85830 57308</a>
             </div>
-            <div class="contacts-item">
+            <!-- <div class="contacts-item">
               <h4>Name</h4>
               <a href="tel:+4733378901">+47 333 78 901</a>
-            </div>
+            </div> -->
           </div>
         </div>
       </div>
@@ -178,7 +178,6 @@
       <h2>Follow us</h2>
       <div class="platforms">
         <div><a href="https://www.facebook.com/regalia.rccfests/" target="_blank">Facebook</a></div>
-        <div><a href="" target="_blank">Twitter</a></div>
         <div><a href="https://www.instagram.com/regalia_rcc_2022/" target="_blank">Instagram</a></div>
       </div>
       <iframe class="maps-mob-iframe" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3685.760388605362!2d88.36258649999999!3d22.5131715!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39f89c4c402582b5%3A0x8cfff1e8bddb6ff!2sNazrul%20Mancha!5e0!3m2!1sen!2sin!4v1651865870162!5m2!1sen!2sin" width="600" height="450" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
