--- a/src/event/index.html
+++ b/src/event/index.html
@@ -4,10 +4,9 @@
     <title></title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
     <a href="/">Go back to home</a>
-    <h1>About</h1>
+    <h1>event</h1>
   </body>
 </html>
