--- a/src/index.html
+++ b/src/index.html
@@ -1,200 +1,284 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="scroll-smooth">
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="x-ua-compatible" content="ie=edge" />
+    <meta name="msapplication-tap-highlight" content="no" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-<head>
-  <meta charset="utf-8" />
-  <meta http-equiv="x-ua-compatible" content="ie=edge" />
-  <meta name="msapplication-tap-highlight" content="no" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Regalia '22 | The Annual Cultural Fest</title>
 
-  <title>Regalia '22 | The Annual Cultural Fest</title>
+    <meta name="author" content="Regalia 2022 Tech Team" />
+    <meta name="keywords" content="website annual fest rcciit college" />
+    <meta
+      name="description"
+      content="Regalia - The annual cultural fest in RCC Institute of Information Technology 2022"
+    />
 
-  <meta name="author" content="Regalia 2022 Tech Team" />
-  <meta name="keywords" content="website annual fest rcciit college" />
-  <meta name="description"
-    content="Regalia - The annual cultural fest in RCC Institute of Information Technology 2022" />
+    <meta itemprop="name" content="Regalia" />
+    <meta
+      itemprop="description"
+      content="Regalia - The annual cultural fest in RCC Institute of Information Technology 2022"
+    />
+    <meta itemprop="image" content="http://website_url/image.jpg" />
 
-  <meta itemprop="name" content="Regalia" />
-  <meta itemprop="description"
-    content="Regalia - The annual cultural fest in RCC Institute of Information Technology 2022" />
-  <meta itemprop="image" content="http://website_url/image.jpg" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+    <meta name="apple-mobile-web-app-title" content="Regalia '22" />
 
-<meta name="apple-mobile-web-app-capable" content="yes" />
-  <meta name="apple-mobile-web-app-status-bar-style" content="black" />
-  <meta name="apple-mobile-web-app-title" content="Regalia '22" />
+    <meta property="og:url" content="http://yourawesomeproject.com" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Regalia '22" />
+    <meta property="og:image" content="http://website_url/image.jpg" />
+    <meta
+      property="og:description"
+      content="Regalia - The annual cultural fest in RCC Institute of Information Technology 2022"
+    />
+    <meta property="og:site_name" content="Site Name" />
 
-  <meta property="og:url" content="http://yourawesomeproject.com" />
-  <meta property="og:type" content="website" />
-  <meta property="og:title" content="Regalia '22" />
-  <meta property="og:image" content="http://website_url/image.jpg" />
-  <meta property="og:description"
-    content="Regalia - The annual cultural fest in RCC Institute of Information Technology 2022" />
-  <meta property="og:site_name" content="Site Name" />
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:site" content="@site_account" />
+    <meta name="twitter:creator" content="@individual_account" />
+    <meta name="twitter:url" content="url_here" />
+    <meta name="twitter:title" content="Regalia 2022" />
+    <meta
+      name="twitter:description"
+      content="Regalia - The annual cultural fest in RCC Institute of Information Technology 2022"
+    />
+    <meta
+      name="twitter:image"
+      content="http://yourawesomeproject.com/image.jpg"
+    />
 
-  <meta name="twitter:card" content="summary" />
-  <meta name="twitter:site" content="@site_account" />
-  <meta name="twitter:creator" content="@individual_account" />
-  <meta name="twitter:url" content="url_here" />
-  <meta name="twitter:title" content="Regalia 2022" />
-  <meta name="twitter:description"
-    content="Regalia - The annual cultural fest in RCC Institute of Information Technology 2022" />
-  <meta name="twitter:image" content="http://yourawesomeproject.com/image.jpg" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="manifest" href="/site.webmanifest" />
 
-  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
-  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
-  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
-  <link rel="manifest" href="/site.webmanifest" />
+    <link type="text/plain" rel="author" href="/humans.txt" />
+    <link rel="stylesheet" href="contact.css" />
+  </head>
 
-  <link type="text/plain" rel="author" href="/humans.txt" />
-  <link rel="stylesheet" href="contact.css" />
-</head>
+  <!-- This is only for debugging -->
+  <style>
+    * {
+      outline: 2px solid green;
+    }
+    * {
+      outline: none;
+    }
+  </style>
 
-<!-- This is only for debugging -->
-<style>
-  * {
- outline: 2px solid green;
-  }
-* {
-  outline: none;
-}
-</style>
+  <body
+    class="relative bg-background font-primary text-text"
+    style="margin: 0px"
+  >
+    <img
+      class="absolute z-0 h-screen w-full object-cover object-center"
+      src="images/bg_home.jpg"
+      alt=""
+      aria-hidden="true"
+    />
+    <div class="absolute inset-0 z-[1] h-screen bg-background opacity-40"></div>
 
-<body class="relative scroll-smooth bg-background font-primary text-text" style="margin: 0px;">
-  <img class="absolute w-full h-screen z-0 object-cover object-center" src="images/bg_home.jpg" alt=""
-    aria-hidden="true" />
-  <div class="absolute inset-0 h-screen z-[1] bg-background opacity-40"></div>
+    <nav
+      data-navbar
+      class="fixed top-0 z-40 w-full transition-colors duration-200 ease-linear"
+    >
+      <div
+        class="flex w-full flex-col items-center justify-between space-y-2 px-6 md:px-12 py-2 sm:flex-row md:py-4"
+      >
+        <a class="flex items-center justify-between space-x-4" href="https://www.rcciit.org/" target="_blank">
+          <div class="h-9 w-5 shrink-0">
+            <img
+              class="block h-full w-full"
+              src="./images/logo_rcciit.png"
+              alt="RCCIIT logo"
+            />
+          </div>
+          <p class="w-max text-mini font-bold sm:text-base sm:leading-tight">
+            Rcc Institute of Information Technology
+            <span class="mt-1 block text-micro font-bold sm:text-mini">
+              Canal South Road. Beliaghata. Kolkata - 700 015
+            </span>
+          </p>
+        </a>
 
-  <nav data-navbar class="fixed top-0 z-40 w-full transition-colors duration-200 ease-linear">
-    <div class="flex w-full flex-col items-center justify-between sm:flex-row space-y-2 px-6 py-2 md:py-4">
-      <div class="flex items-center justify-between space-x-4">
-        <div class="h-9 w-5 shrink-0">
-          <img class="block h-full w-full" src="./images/logo_rcciit.png" alt="RCCIIT logo" />
-        </div>
-        <p class="w-max text-mini font-bold sm:text-base sm:leading-tight">
-          Rcc Institute of Information Technology
-          <span class="mt-1 block text-micro font-bold sm:text-mini">
-            Canal South Road. Beliaghata. Kolkata - 700 015
-          </span>
-        </p>
-      </div>
-      <div class="flex w-full sm:w-min md:space-x-6 sm:text-base items-center justify-between font-medium">
-        <a data-navlink href="#home">Home</a>
-        <a data-navlink href="#event">Events</a>
-        <a data-navlink href="#artist">Artists</a>
-        <a data-navlink href="#about">About</a>
-        <a data-navlink href="#contact">Contact</a>
-      </div>
-    </div>
-  </nav>
-
-  <!-- HOME -->
-  <section data-home id="home" class="relative z-[2] h-screen w-full pt-24">
-    <div class="z-10 px-6">
-      <div class="mt-8 space-y-2">
-        <p class="font-medium">Presenting the annual cultural fest</p>
-        <h1 class="text-5xl sm:text-title font-bold sm:font-black sm:uppercase tracking-wide">Regalia '22</h1>
-      </div>
-
-      <div class="mt-4 text-2xl font-bold sm:text-sub-title">
-        <h3>Relive.</h3>
-        <h3>Rejoice.</h3>
-        <h3>Rejuvinate.</h3>
-      </div>
-
-      <!-- button -->
-      <a href="#artist" class="mt-6 sm:mt-10 inline-block rounded-full bg-accent px-5 py-2 font-bold">See featured artists</a>
-
-      <div class="absolute bottom-10 sm:right-6">
-        <div class="h-40 w-40 sm:h-48 sm:w-48 sm:ml-auto">
-          <img class="block h-full w-full" src="./images/logo_regalia.png" alt="" aria-hidden="true" />
-        </div>
-        <p class="mt-1 font-light sm:text-sub-title sm:text-right">19 to 20 May</p>
-        <div class="flex items-center space-x-2 sm:text-sub-title">
-          <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 sm:h-8 sm:w-8" viewBox="0 0 20 20" fill="currentColor">
-            <path fill-rule="evenodd"
-              d="M5.05 4.05a7 7 0 119.9 9.9L10 18.9l-4.95-4.95a7 7 0 010-9.9zM10 11a2 2 0 100-4 2 2 0 000 4z"
-              clip-rule="evenodd" />
-          </svg>
-          <p class="font-bold sm:text-right">Nazrul Mancha</p>
+        <div
+          class="flex w-full items-center justify-between font-medium sm:font-bold sm:w-min sm:text-base md:space-x-6"
+        >
+          <a data-navlink href="#home">Home</a>
+          <!-- <a data-navlink href="#event">Events</a> -->
+          <a data-navlink href="#artist">Artists</a>
+          <a data-navlink href="#gallery">Gallery</a>
+          <a data-navlink href="#contact">Contact</a>
         </div>
       </div>
-    </div>
+    </nav>
 
-    <div style="background: linear-gradient(to top, #0d0d0d, rgba(0, 0, 0, 0))"
-      class="absolute bottom-0 z-50 h-20 w-full"></div>
-  </section>
-
-  <!-- EVENTS -->
-  <section data-event id="event" class="p h-screen w-full pt-24">
-    <h1 class="text-title font-black">Events</h1>
-  </section>
-
-  <!-- ARTISTS -->
-  <section data-artist id="artist" class="p h-screen w-full pt-24">
-    <h1 class="text-title font-black">Artists</h1>
-  </section>
-
-  <!-- ABOUT -->
-  <section data-contact id="about" class="p h-screen w-full pt-24">
-    <h1 class="text-title font-black">About</h1>
-  </section>
-
-  <!-- CONTACT -->
-  <!-- helped by @infuman69 -->
-  <section data-contact id="contact" class="contact px-6 w-full">
-    <h1 class="contact-head">Contact</h1>
-    <h6 class="contact-head-6">For any query reach out to us</h6>
-    <div class="contact-middle-section">
-      <!-- fallin-rain: I have added the w and h for prevent overflowing on smaller width devices.
-        TODO: Reconfigure the CSS -->
-      <div class="google-maps">
-        <iframe class="maps" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3685.760388605362!2d88.36258649999999!3d22.5131715!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39f89c4c402582b5%3A0x8cfff1e8bddb6ff!2sNazrul%20Mancha!5e0!3m2!1sen!2sin!4v1651865870162!5m2!1sen!2sin" width="600" height="450" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-      </div>
-      <div class="contact-email-section">
-        <div class="email-us">
-          <h3 class="font-bold">Email us at</h3>
-          <a href="mailto:regalia2k22@gmail.com">regalia2k22@gmail.com</a>
+    <!-- HOME -->
+    <section data-home id="home" class="relative z-[2] min-h-screen w-full pt-24">
+      <div class="z-10 px-6 md:px-12">
+        <div class="mt-8 space-y-2">
+          <p class="font-medium">Presenting the annual cultural fest</p>
+          <h1
+            class="text-5xl font-bold tracking-wide sm:text-title sm:font-black sm:uppercase"
+          >
+            Regalia '22
+          </h1>
         </div>
-        <div class="contact-us">
-          <h3>Contact us</h3>
-          <div class="contacts font-primary">
-            <div class="contacts-item">
-              <h4>Bhaswati Chakraborty</h4>
-              <a href="tel:+916291293545">+91 62912 93545</a>
-            </div>
-            <div class="contacts-item">
-              <h4>Nivedita Chakraborty</h4>
-              <a href="tel:+918583057308">+91 85830 57308</a>
-            </div>
-            <!-- <div class="contacts-item">
-              <h4>Name</h4>
-              <a href="tel:+4733378901">+47 333 78 901</a>
-            </div> -->
+
+        <div class="mt-4 text-2xl font-bold sm:text-sub-title">
+          <h3>Relive.</h3>
+          <h3>Rejoice.</h3>
+          <h3>Rejuvinate.</h3>
+        </div>
+
+        <!-- links as button -->
+        <div class="mt-6 flex space-x-6">
+          <a
+            href="event/"
+            class="inline-block rounded-full bg-accent px-5 py-2 font-bold sm:mt-10"
+            >See events</a
+          >
+          <a
+            href="about/"
+            class="inline-block rounded-full border border-accent px-5 py-2 font-bold sm:mt-10"
+            >About Regalia</a
+          >
+          
+        </div>
+
+        <div class="absolute bottom-10 sm:right-12">
+          <div class="h-40 w-40 sm:ml-auto sm:h-48 sm:w-48">
+            <img
+              class="block h-full w-full"
+              src="./images/logo_regalia.png"
+              alt=""
+              aria-hidden="true"
+            />
+          </div>
+          <p class="mt-1 font-light sm:text-right sm:text-sub-title">
+            19 to 20 May
+          </p>
+          <div class="flex items-center space-x-2 sm:text-sub-title">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              class="h-5 w-5 sm:h-8 sm:w-8"
+              viewBox="0 0 20 20"
+              fill="currentColor"
+            >
+              <path
+                fill-rule="evenodd"
+                d="M5.05 4.05a7 7 0 119.9 9.9L10 18.9l-4.95-4.95a7 7 0 010-9.9zM10 11a2 2 0 100-4 2 2 0 000 4z"
+                clip-rule="evenodd"
+              />
+            </svg>
+            <p class="font-bold sm:text-right">Nazrul Mancha</p>
           </div>
         </div>
       </div>
-    </div>
-    <div class="follow-us">
-      <h2>Follow us</h2>
-      <div class="platforms">
-        <div><a href="https://www.facebook.com/regalia.rccfests/" target="_blank">Facebook</a></div>
-        <div><a href="https://www.instagram.com/regalia_rcc_2022/" target="_blank">Instagram</a></div>
-      </div>
-      <iframe class="maps-mob-iframe" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3685.760388605362!2d88.36258649999999!3d22.5131715!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39f89c4c402582b5%3A0x8cfff1e8bddb6ff!2sNazrul%20Mancha!5e0!3m2!1sen!2sin!4v1651865870162!5m2!1sen!2sin" width="600" height="450" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-    </div>
+
+      <div
+        style="background: linear-gradient(to top, #0d0d0d, rgba(0, 0, 0, 0))"
+        class="absolute bottom-0 z-50 h-20 w-full"
+      ></div>
     </section>
 
-  <footer data-footer>
-    <!-- add footer -->
-  </footer>
+    <!-- ARTISTS -->
+    <section data-artist id="artist" class="px-6 md:px-12 min-h-screen w-full scroll-mt-20">
+      <h1 class="text-title font-black">Artists</h1>
+    </section>
 
-  <!-- PRELOADER -->
-  <div data-preloader aria-hidden="true" aria-label="">
-    <!-- add preloader -->
-  </div>
+    <!-- GALLERY -->
+    <section data-gallery id="gallery" class="px-6 md:px-12 min-h-screen w-full scroll-mt-20">
+      <h1 class="text-title font-black">Gallery</h1>
+      <p class="text-accent mt-6">See some of the best photos of Regalia</p>
+      <!-- carousel container -->
+      <div data-carousel class="w-full flex space-x-6 flex-shrink-0 snap-x">
+        <!-- generate from js -->
+      </div>
+    </section>
 
-  <!-- (do not edit below) -->
-  <script type="module" src="/main.js"></script>
-</body>
+    <!-- CONTACT -->
+    <!-- helped by @infuman69 -->
+    <section data-contact id="contact" class="contact w-full px-6 md:px-8 scroll-mt-20">
+      <h1 class="contact-head">Contact</h1>
+      <h6 class="contact-head-6">For any query reach out to us</h6>
+      <div class="contact-middle-section">
+        <div class="google-maps">
+          <iframe
+            class="maps"
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3685.760388605362!2d88.36258649999999!3d22.5131715!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39f89c4c402582b5%3A0x8cfff1e8bddb6ff!2sNazrul%20Mancha!5e0!3m2!1sen!2sin!4v1651865870162!5m2!1sen!2sin"
+            width="600"
+            height="450"
+            allowfullscreen=""
+            loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"
+          ></iframe>
+        </div>
+        <div class="contact-email-section">
+          <div class="email-us">
+            <h3 class="font-bold">Email us at</h3>
+            <a href="mailto:regalia2k22@gmail.com">regalia2k22@gmail.com</a>
+          </div>
+          <div class="contact-us">
+            <h3>Contact us</h3>
+            <div class="contacts font-primary">
+              <div class="contacts-item">
+                <h4>Bhaswati Chakraborty</h4>
+                <a href="tel:+916291293545">+91 62912 93545</a>
+              </div>
+              <div class="contacts-item">
+                <h4>Nivedita Chakraborty</h4>
+                <a href="tel:+918583057308">+91 85830 57308</a>
+              </div>
+              <!-- <div class="contacts-item">
+              <h4>Name</h4>
+              <a href="tel:+4733378901">+47 333 78 901</a>
+            </div> -->
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="follow-us">
+        <h2>Follow us</h2>
+        <div class="platforms">
+          <div>
+            <a href="https://www.facebook.com/regalia.rccfests/" target="_blank"
+              >Facebook</a
+            >
+          </div>
+          <div>
+            <a
+              href="https://www.instagram.com/regalia_rcc_2022/"
+              target="_blank"
+              >Instagram</a
+            >
+          </div>
+        </div>
+        <iframe
+          class="maps-mob-iframe"
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3685.760388605362!2d88.36258649999999!3d22.5131715!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39f89c4c402582b5%3A0x8cfff1e8bddb6ff!2sNazrul%20Mancha!5e0!3m2!1sen!2sin!4v1651865870162!5m2!1sen!2sin"
+          width="600"
+          height="450"
+          allowfullscreen=""
+          loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade"
+        ></iframe>
+      </div>
+    </section>
 
+    <footer data-footer>
+      <!-- add footer -->
+    </footer>
+
+    <!-- PRELOADER -->
+    <div data-preloader aria-hidden="true" aria-label="">
+      <!-- add preloader -->
+    </div>
+
+    <!-- (do not edit below) -->
+    <script type="module" src="/main.js"></script>
+  </body>
 </html>
