--- a/src/index.html
+++ b/src/index.html
@@ -56,6 +56,7 @@
     <link rel="manifest" href="/site.webmanifest" />
 
     <link type="text/plain" rel="author" href="/humans.txt" />
+
     <link rel="stylesheet" href="contact.css" />
   </head>
 
@@ -83,7 +84,7 @@
 
     <nav
       data-navbar
-      class="fixed top-0 z-40 w-full transition-colors duration-200 ease-linear"
+      class="fixed top-0 z-40 w-full transition-colors duration-200 ease-linear will-change-contents"
     >
       <div
         class="flex w-full flex-col items-center justify-between space-y-2 px-6 md:px-12 py-2 sm:flex-row md:py-4"
@@ -97,7 +98,7 @@
             />
           </div>
           <p class="w-max text-mini font-bold sm:text-base sm:leading-tight">
-            Rcc Institute of Information Technology
+            RCC Institute of Information Technology
             <span class="mt-1 block text-micro font-bold sm:text-mini">
               Canal South Road. Beliaghata. Kolkata - 700 015
             </span>
@@ -122,34 +123,34 @@
         <div class="mt-8 space-y-2">
           <p class="font-medium">Presenting the annual cultural fest</p>
           <h1
-            class="text-5xl font-bold tracking-wide sm:text-title sm:font-black sm:uppercase"
+            class="text-5xl font-bold tracking-wide sm:tracking-normal sm:text-title sm:font-black"
           >
             Regalia '22
           </h1>
         </div>
 
-        <div class="mt-4 text-2xl font-bold sm:text-sub-title">
+        <div class="mt-8 text-2xl font-bold sm:text-sub-title">
           <h3>Relive.</h3>
           <h3>Rejoice.</h3>
           <h3>Rejuvinate.</h3>
         </div>
 
         <!-- links as button -->
-        <div class="mt-6 flex space-x-6">
+        <div class="mt-8 flex space-x-6">
           <a
             href="event/"
-            class="inline-block rounded-full bg-accent px-5 py-2 font-bold sm:mt-10"
+            class="inline-block rounded-full bg-accent px-5 py-2 font-bold sm:mt-10 md:hover:bg-opacity-70"
             >See events</a
           >
           <a
             href="about/"
-            class="inline-block rounded-full border border-accent px-5 py-2 font-bold sm:mt-10"
+            class="inline-block rounded-full border border-accent px-5 py-2 font-bold sm:mt-10 md:hover:bg-accent md:hover:bg-opacity-70"
             >About Regalia</a
           >
           
         </div>
 
-        <div class="absolute bottom-10 sm:right-12">
+        <div class="absolute bottom-16 sm:right-12">
           <div class="h-40 w-40 sm:ml-auto sm:h-48 sm:w-48">
             <img
               class="block h-full w-full"
@@ -191,11 +192,12 @@
     </section>
 
     <!-- GALLERY -->
-    <section data-gallery id="gallery" class="px-6 md:px-12 min-h-screen w-full scroll-mt-20">
+    <section data-gallery id="gallery" class="px-6 md:px-12 w-full space-y-6 scroll-mt-20 mb-12">
       <h1 class="text-title font-black">Gallery</h1>
       <p class="text-accent mt-6">See some of the best photos of Regalia</p>
       <!-- carousel container -->
-      <div data-carousel class="w-full flex space-x-6 flex-shrink-0 snap-x">
+      <div data-carousel style="::-webkit-scrollbar {display: none;} -ms-overflow-style: none; scrollbar-width: none;"
+        class="w-full h-[calc(40vh-10rem)] sm:h-[calc(100vh-10rem)] flex space-x-6 sm:space-x-12 flex-shrink-0 snap-x snap-mandatory overflow-x-scroll select-none will-change-transform">
         <!-- generate from js -->
       </div>
     </section>
