--- a/src/index.html
+++ b/src/index.html
@@ -109,7 +109,6 @@
           class="flex w-full items-center justify-between font-medium sm:font-bold sm:w-min sm:text-base md:space-x-6"
         >
           <a data-navlink href="#home">Home</a>
-          <!-- <a data-navlink href="#event">Events</a> -->
           <a data-navlink href="#artist">Artists</a>
           <a data-navlink href="#gallery">Gallery</a>
           <a data-navlink href="#contact">Contact</a>
@@ -120,16 +119,16 @@
     <!-- HOME -->
     <section data-home id="home" class="relative z-[2] min-h-screen w-full pt-24">
       <div class="z-10 px-6 md:px-12">
-        <div class="mt-8 space-y-2">
+        <div class="mt-6 sm:mt-8 space-y-2">
           <p class="font-medium">Presenting the annual cultural fest</p>
           <h1
-            class="text-5xl font-bold tracking-wide sm:tracking-normal sm:text-title sm:font-black"
+            class="text-5xl font-bold sm:text-title sm:font-black"
           >
             Regalia '22
           </h1>
         </div>
 
-        <div class="mt-8 text-2xl font-bold sm:text-sub-title">
+        <div class="mt-6 sm:mt-12 sm:space-y-4 text-2xl font-bold sm:text-sub-title">
           <h3>Relive.</h3>
           <h3>Rejoice.</h3>
           <h3>Rejuvinate.</h3>
@@ -193,11 +192,11 @@
 
     <!-- GALLERY -->
     <section data-gallery id="gallery" class="px-6 md:px-12 w-full space-y-6 scroll-mt-20 mb-12">
-      <h1 class="text-title font-black">Gallery</h1>
+      <h1 class="text-5xl font-black">Gallery</h1>
       <p class="text-accent mt-6">See some of the best photos of Regalia</p>
       <!-- carousel container -->
       <div data-carousel style="::-webkit-scrollbar {display: none;} -ms-overflow-style: none; scrollbar-width: none;"
-        class="w-full h-[calc(40vh-10rem)] sm:h-[calc(100vh-10rem)] flex space-x-6 sm:space-x-12 flex-shrink-0 snap-x snap-mandatory overflow-x-scroll select-none will-change-transform">
+        class="w-full py-6 h-[calc(100vh/10rem)] sm:h-[calc(100vh-15rem)] flex space-x-6 sm:space-x-12 flex-shrink-0 snap-x snap-mandatory overflow-x-scroll select-none will-change-transform">
         <!-- generate from js -->
       </div>
     </section>
