--- a/src/index.html
+++ b/src/index.html
@@ -109,7 +109,7 @@
           class="flex w-full items-center justify-between font-medium sm:font-bold sm:w-min sm:text-base md:space-x-6"
         >
           <a data-navlink href="#home">Home</a>
-          <a data-navlink href="#artist">Artists</a>
+          <a data-navlink data-wip href="#artist">Artists</a>
           <a data-navlink href="#gallery">Gallery</a>
           <a data-navlink href="#contact">Contact</a>
         </div>
@@ -186,13 +186,13 @@
     </section>
 
     <!-- ARTISTS -->
-    <section data-artist id="artist" class="px-6 md:px-12 min-h-screen w-full scroll-mt-20">
+    <section data-artist data-wip id="artist" class="px-6 md:px-12 min-h-screen w-full scroll-mt-20">
       <h1 class="text-title font-black">Artists</h1>
     </section>
 
     <!-- GALLERY -->
     <section data-gallery id="gallery" class="px-6 md:px-12 w-full space-y-6 scroll-mt-20 mb-12">
-      <h1 class="text-5xl font-black">Gallery</h1>
+      <h1 class="text-5xl md:text-title font-black">Gallery</h1>
       <p class="text-accent mt-6">See some of the best photos of Regalia</p>
       <!-- carousel container -->
       <div data-carousel style="::-webkit-scrollbar {display: none;} -ms-overflow-style: none; scrollbar-width: none;"
