--- a/src/index.html
+++ b/src/index.html
@@ -131,7 +131,7 @@
         <div class="mt-6 sm:mt-12 sm:space-y-4 text-2xl font-bold sm:text-sub-title">
           <h3>Relive.</h3>
           <h3>Rejoice.</h3>
-          <h3>Rejuvinate.</h3>
+          <h3>Rejuvenate.</h3>
         </div>
 
         <!-- links as button -->
