updated contact page
- removed contact h6
- reduced iframe size
- updated contact font size
- changed some texts

--- a/src/index.html
+++ b/src/index.html
@@ -146,7 +146,7 @@
             class="inline-block rounded-full border border-accent px-5 py-2 font-bold sm:mt-10 md:hover:bg-accent md:hover:bg-opacity-70"
             >About Regalia</a
           >
-          
+
         </div>
 
         <div class="absolute bottom-16 sm:right-12">
@@ -205,14 +205,13 @@
     <!-- helped by @infuman69 -->
     <section data-contact id="contact" class="contact w-full px-6 md:px-8 scroll-mt-20">
       <h1 class="contact-head">Contact</h1>
-      <h6 class="contact-head-6">For any query reach out to us</h6>
       <div class="contact-middle-section">
         <div class="google-maps">
           <iframe
             class="maps"
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3685.760388605362!2d88.36258649999999!3d22.5131715!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39f89c4c402582b5%3A0x8cfff1e8bddb6ff!2sNazrul%20Mancha!5e0!3m2!1sen!2sin!4v1651865870162!5m2!1sen!2sin"
-            width="600"
-            height="450"
+            width="500"
+            height="350"
             allowfullscreen=""
             loading="lazy"
             referrerpolicy="no-referrer-when-downgrade"
@@ -220,18 +219,18 @@
         </div>
         <div class="contact-email-section">
           <div class="email-us">
-            <h3 class="font-bold">Email us at</h3>
+            <h3 class="font-bold">Email</h3>
             <a href="mailto:regalia2k22@gmail.com">regalia2k22@gmail.com</a>
           </div>
           <div class="contact-us">
-            <h3>Contact us</h3>
+            <h3>Coordinators</h3>
             <div class="contacts font-primary">
               <div class="contacts-item">
-                <h4>Bhaswati Chakraborty</h4>
+                <h5>Bhaswati Chakraborty</h5>
                 <a href="tel:+916291293545">+91 62912 93545</a>
               </div>
               <div class="contacts-item">
-                <h4>Nivedita Chakraborty</h4>
+                <h5>Nivedita Chakraborty</h5>
                 <a href="tel:+918583057308">+91 85830 57308</a>
               </div>
               <!-- <div class="contacts-item">
