--- a/src/index.html
+++ b/src/index.html
@@ -57,7 +57,7 @@
 
     <link type="text/plain" rel="author" href="/humans.txt" />
 
-    <link rel="stylesheet" href="contact.css" />
+    <link rel="stylesheet" href="./contact.css" />
   </head>
 
   <!-- This is only for debugging -->
