fixed menu backgroud

--- a/src/index.html
+++ b/src/index.html
@@ -131,7 +131,7 @@
 
       <!-- links as button -->
       <div class="mt-6 flex space-x-6">
-        <a href="event/"
+        <a href="events/"
           class="inline-block rounded-full bg-accent px-5 py-2 font-bold sm:mt-10 md:hover:bg-opacity-70">See events</a>
         <a href="about/"
           class="inline-block rounded-full border border-accent px-5 py-2 font-bold sm:mt-10 md:hover:bg-accent md:hover:bg-opacity-70">About
