fixed menu bg issue on desktop screena

--- a/src/index.html
+++ b/src/index.html
@@ -82,7 +82,7 @@
         </svg>
       </button>
       <div class="hidden w-full md:block md:w-auto" id="mobile-menu">
-        <ul class="mt-4 flex flex-col md:mt-0 md:flex-row md:space-x-8 md:text-sm md:font-bold bg-background rounded-lg overflow-hidden">
+        <ul class="mt-4 flex flex-col md:mt-0 md:flex-row md:space-x-8 md:text-sm md:font-bold bg-background md:bg-transparent rounded-lg overflow-hidden">
           <li>
             <a href="#home" class="block rounded bg-accent py-2 pr-4 pl-3 text-text md:bg-transparent md:p-0">Home</a>
           </li>
