optimized image and minor tweaks

--- a/src/events/index.html
+++ b/src/events/index.html
@@ -25,7 +25,7 @@
         </div>
 
         <div class="card">
-            <img id="card-image" src="images\michael-lee-5Z9bgfRZLLE-unsplash.jpg" alt="fashion show" loading="lazy" style="width:100%">
+            <img id="card-image" src="images\michael-lee-5Z9bgfRZLLE-unsplash.webp" alt="fashion show" loading="lazy" style="width:100%">
             <div class="container">
                 <span class="name">Kasish-e-haya.</span>
                 <div class="divider"></div>
