***CARPE DIEM SPECIAL***
- minor change - events styling

--- a/src/events/index.html
+++ b/src/events/index.html
@@ -49,10 +49,9 @@
             </div>
         </div>
         <div class="card">
-            <img id="card-image" src="images\allie-reefer-rAoQn6kwv64-unsplash.webp" alt="3 minutes to fame" loading="lazy" style="width:100%; height:70%">
+            <img class="special-image" id="card-image" src="images\allie-reefer-rAoQn6kwv64-unsplash.webp" alt="3 minutes to fame" loading="lazy" style="width:100%; height:70%">
             <div class="container">
                 <span class="name">Carpe Diem.</span>
-                    <div class="divider"></div>
                     <p class="bio">"A positive attitude opens the door to positive opportunities, which leads to a positive life."
                     - Joel Benjamin
                     </p>
@@ -60,10 +59,9 @@
             </div>
         </div>
         <div class="card">
-            <img id="card-image" src="images\lilly-rum-L6W9ZIQ5saM-unsplash.webp" alt="Photography" loading="lazy" style="width:100%; height:70%">
+            <img id="card-image" src="images\lilly-rum-L6W9ZIQ5saM-unsplash.webp" alt="Photography" loading="lazy" style="width:100%">
             <div class="container">
                 <span class="name">Looking Glass.</span>
-                    <div class="divider"></div>
                     <p class="bio">"Photography has nothing to do with the camera"
                         - Lucas Gentry
                     </p>
@@ -71,10 +69,9 @@
             </div>
         </div>
         <div class="card">
-            <img id="card-image" src="images\eaters-collective-i_xVfNtQjwI-unsplash.webp" alt="Reel making" loading="lazy" style="width:100%; height:70%">
+            <img id="card-image" src="images\eaters-collective-i_xVfNtQjwI-unsplash.webp" alt="Reel making" loading="lazy" style="width:100%">
             <div class="container">
                 <span class="name">Social Seize.</span>
-                    <div class="divider"></div>
                     <p class="bio">They say, if a picture is worth a thousand words, then a video is worth a million.</p>
                     <button data-modal-target="#modal6">Learn more</button>
             </div>
