final responsive+new events

--- a/src/events/index.html
+++ b/src/events/index.html
@@ -52,6 +52,7 @@
             <img class="special-image" id="card-image" src="images\allie-reefer-rAoQn6kwv64-unsplash.webp" alt="3 minutes to fame" loading="lazy" style="width:100%; height:70%">
             <div class="container">
                 <span class="name">Carpe Diem.</span>
+                <div class="divider"></div>
                     <p class="bio">"A positive attitude opens the door to positive opportunities, which leads to a positive life."
                     - Joel Benjamin
                     </p>
@@ -62,6 +63,7 @@
             <img id="card-image" src="images\lilly-rum-L6W9ZIQ5saM-unsplash.webp" alt="Photography" loading="lazy" style="width:100%">
             <div class="container">
                 <span class="name">Looking Glass.</span>
+                <div class="divider"></div>
                     <p class="bio">"Photography has nothing to do with the camera"
                         - Lucas Gentry
                     </p>
@@ -72,8 +74,28 @@
             <img id="card-image" src="images\eaters-collective-i_xVfNtQjwI-unsplash.webp" alt="Reel making" loading="lazy" style="width:100%">
             <div class="container">
                 <span class="name">Social Seize.</span>
+                <div class="divider"></div>
                     <p class="bio">They say, if a picture is worth a thousand words, then a video is worth a million.</p>
                     <button data-modal-target="#modal6">Learn more</button>
+            </div>
+        </div>
+        <div class="card">
+            <img id="card-image" src="images\rob-schreckhise-8zdEgWg5JAA-unsplash (1).webp" alt="Reddit Rumble" loading="lazy" style="width:100%">
+            <div class="container">
+                <span class="name">Reddit Rumble.</span>
+                <div class="divider"></div>
+                    <p class="bio">Here's to belonging to a generation that copes with the miseries of life, through memes.</p>
+                    <button data-modal-target="#modal7">Learn more</button>
+            </div>
+        </div>
+        <div class="card">
+            <img id="card-image" src="images\BRANDMA-BIG-BABOL.webp" alt="Ad Spoof" loading="lazy" style="width:100% ; height: 67%;">
+            <div class="container">
+                <span class="name">Funny Bones.</span>
+                <div class="divider"></div>
+                    <p class="bio">"Advertising is the art of persuasion"
+                        - William Bernbach</p>
+                    <button data-modal-target="#modal8">Learn more</button>
             </div>
         </div>
     </div>
@@ -283,6 +305,63 @@ Coordinators :- <br>
     </div>
 </div>
 
+<div class="modal" id="modal7">
+    <div class="modal-header">
+       <div class="title">Rules & Regulations: <b>REDDIT RUMBLE</b></div>
+       <button data-close-button class="close-button">&times;</button>
+    </div>
+    <div class="modal-body">
+        Team REGALIA 2022 brings to you, REDDIT RUMBLE, your opportunity to make people laugh out loud (for real!) with your creative memes 😂.
+            <ol>
+            <li>Theme: Open.</li>
+            <li>As many number of submissions is allowed per person, but per submission you have to pay Rs 10/-.</li>
+            <li>The memes should not hurt the sentiments of any person, ie, no political, anti secular or vulgar memes are allowed. Also, sentiments of college or Regalia should not be hurt.</li>
+            <li>Memes can be of the following language :- English, Bengali, Hindi.</li>
+            <li>Try to avoid using swear words, if you’re using any, use “*” to cover it.</li>
+            <li>Submissions will be taken via google form, where participants have to submit the memes on the google form and then it will be posted on our page and the meme with most engagements will win.</li>
+            </ol>
+            <h3>Keep making the memes, keep them coming!
+                <br></h3>
+            Registration fee: Rs 10/-
+            <br>
+            Registration link: <a href="https://forms.gle/c2tNZEexT9FGWBGE6">https://forms.gle/c2tNZEexT9FGWBGE6</a>
+            <br> <br>
+            Coordinators :- <br>
+            <b>Abhirup Tapadar : <a href="+917003794044">+917003794044</a></b>  <br>
+            <b>Jagrit Sarkar : <a href="+918372821542">+918372821542</a> </b> <br>
+            Payment UPI ID :-
+            8697431076@ybl
+    </div>
+</div>
+
+<div class="modal" id="modal8">
+    <div class="modal-header">
+       <div class="title">Rules & Regulations: <b>FUNNY BONES</b></div>
+       <button data-close-button class="close-button">&times;</button>
+    </div>
+    <div class="modal-body">
+        A world where 'content is the king' and 'the biggest sales tool', we encourage you to master the art and showcase your creativity in the Ad Spoof event of Team REGALIA 2022, FUNNY BONES 🤣📸.
+            <ol>
+            <li>Theme: Open.</li>
+            <li> 1 submission is allowed per team.</li>
+            <li> The spoof should be a caricature of any popular advertisement or can be an original creation too, it can be a photo or a video and duration should be under 2 minutes, if it is a video.</li>
+            <li>Any obscenity or vulgarity in the ad will lead to immediate disqualification. Using curse words in the ad or using beep in it’s place will also lead to disqualification.</li>
+            <li>. Submissions will be taken via google form provided above and for safety reasons, the participating team will also be asked to provide a drive link for their spoof in the google form.</li>
+            <li>The submissions must be done within 17th May 2022, 11:59 PM.</li> 
+            <li>The results will be declared on 19th May, 2022.</li>
+            <li>Top 3 submissions will be awarded a prize for the spoof and asked to be present on the final day of the event.</li>
+            </ol>
+            Registration fee: Rs 50/-
+            <br>
+            Registration link: <a href="https://forms.gle/L8HSQnRbJ1g8LdAA8">https://forms.gle/L8HSQnRbJ1g8LdAA8</a>
+            <br> <br>
+            Coordinators :- <br>
+            <b>Abhirup Tapadar : <a href="+917003794044">+917003794044</a></b>  <br>
+            <b>Jagrit Sarkar : <a href="+918372821542">+918372821542</a> </b> <br>
+            Payment UPI ID :-
+            8697431076@ybl
+    </div>
+</div>
 
 <div id="overlay"></div>
 </body>
